ajout validation adresse email, mdp et cas champs vide

--- a/templates/inscription.twig
+++ b/templates/inscription.twig
@@ -26,6 +26,7 @@
                     <button type="submit" class="btn btn-primary">Envoyer</button>
                 </form>
             </div>
+            <p>Déja inscrit ? <a href="">Connectez-vous ici</a></p>
         </div>
     </div>
 {% endblock %}
