--- a/templates/include/header.twig
+++ b/templates/include/header.twig
@@ -10,6 +10,7 @@
             <ul class="navbar-nav ms-auto py-4 py-lg-0">
                 <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/">Home</a></li>
                 <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/?p=inscription">Inscription</a>
+                <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/?p=connexion">Connexion</a>
                 </li>
             </ul>
         </div>
