--- a/templates/inscription.twig
+++ b/templates/inscription.twig
@@ -5,19 +5,39 @@
     <div class="container">
         <div class="row">
             <div class="col-6">
+                {% if maildejautilise %}
+                    <div class="alert alert-warning">
+                        Adresse email déja utilisé, merci d'en choisir une autre
+                    </div>
+                {% elseif inscriptionsucces %}
+                    <div class="alert alert-success">
+                        Bravo, vous êtes inscrit !
+                    </div>
+                {% elseif mdpinvalide %}
+                    <div class="alert alert-warning">
+                        Le mot de passe doit contenir 8 charactères, au moins 1 majuscule, 1 minuscule et 1 chiffre
+                    </div>
+                {% elseif champvide %}
+                    <div class="alert alert-warning">
+                        Merci de remplir les champs obligatoires
+                    </div>
+                {% endif %}
                 <form action="../register.php" method="post">
                     <div class="mb-3">
                         <label for="exampleInputEmail1" class="form-label">Adresse email</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" name="email" aria-describedby="emailHelp">
+                        <input type="email" class="form-control" id="exampleInputEmail1" name="email"
+                               aria-describedby="emailHelp">
                         <div id="emailHelp" class="form-text">Nous ne divulgerons jamais votre adresse mail</div>
                     </div>
                     <div class="mb-3">
                         <label for="exampleInput" class="form-label">Nom</label>
-                        <input type="text" class="form-control" id="exampleInput" name="name" aria-describedby="pseudoHelp">
+                        <input type="text" class="form-control" id="exampleInput" name="name"
+                               aria-describedby="pseudoHelp">
                     </div>
                     <div class="mb-3">
                         <label for="exampleInput" class="form-label">Pseudo</label>
-                        <input type="text" class="form-control" id="exampleInput" name="pseudo" aria-describedby="pseudoHelp">
+                        <input type="text" class="form-control" id="exampleInput" name="pseudo"
+                               aria-describedby="pseudoHelp">
                     </div>
                     <div class="mb-3">
                         <label for="exampleInputPassword1" class="form-label">Mots de passe</label>
@@ -26,7 +46,7 @@
                     <button type="submit" class="btn btn-primary">Envoyer</button>
                 </form>
             </div>
-            <p>Déja inscrit ? <a href="">Connectez-vous ici</a></p>
+            <p>Déja inscrit ? <a href="/?p=connexion">Connectez-vous ici</a></p>
         </div>
     </div>
 {% endblock %}
