finalise connexion system add session and user recuperation

--- a/templates/include/header.twig
+++ b/templates/include/header.twig
@@ -10,7 +10,11 @@
             <ul class="navbar-nav ms-auto py-4 py-lg-0">
                 <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/">Home</a></li>
                 <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/?p=inscription">Inscription</a>
+                    {% if not user_connecte %}
                 <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/?p=connexion">Connexion</a>
+                    {% else %}
+                <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/?deconnexion">Déconnexion</a>
+                    {% endif %}
                 </li>
             </ul>
         </div>
@@ -21,8 +25,8 @@
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
                 <div class="site-heading">
-                    <h1>Clean Blog</h1>
-                    <span class="subheading">A Blog Theme by Start Bootstrap</span>
+                    <h1>Blogs d'Alex</h1>
+                    <span class="subheading">Actualité scientifique, informatique et jeux vidéo</span>
                 </div>
             </div>
         </div>
