--- a/templates/home.twig
+++ b/templates/home.twig
@@ -3,7 +3,7 @@
 {% block content %}
     <!-- Main Content-->
     <div class="container px-4 px-lg-5">
-        <h2>Bonjour {{ session.user_pseudo }}</h2>
+        <h2>Bonjour {{ user.getpseudo }}</h2>
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
                 <!-- Post preview-->
