--- a/templates/base.twig
+++ b/templates/base.twig
@@ -1,33 +1,50 @@
 <!DOCTYPE html>
 <html>
-{% block head %}
-    <head>
-        <meta charset="utf-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-        <meta name="description" content=""/>
-        <meta name="author" content=""/>
-        <title>{% block title %} My Blog {% endblock %}</title>
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico"/>
-        <!-- Font Awesome icons (free version)-->
-        <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
-        <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet"
-              type="text/css"/>
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800"
-              rel="stylesheet" type="text/css"/>
-        <!-- Core theme CSS (includes Bootstrap)-->
-        {% block css %} <link href="../assets/css/styles.css" rel="stylesheet"/> {% endblock %}
-    </head>
-{% endblock %}
-<body>
-{% include 'include/header.twig' %}
+	{% block head %}
+		<head>
+			<meta charset="utf-8"/>
+			<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+			<meta name="description" content=""/>
+			<meta name="author" content=""/>
+			<title>
+				{% block title %}
+					My Blog
+				{% endblock %}
+			</title>
+			<link
+			rel="icon" type="image/x-icon" href="assets/favicon.ico"/>
+			<!-- Font Awesome icons (free version)-->
+			<script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
+			<!-- Google fonts-->
+			<link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css"/>
+			<link
+			href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css"/>
+			<!-- Core theme CSS (includes Bootstrap)-->
+			{% block css %}
+				<link href="../assets/css/styles.css" rel="stylesheet"/>
+			{% endblock %}
+		</head>
+	{% endblock %}
+	<body>
+		{% include 'include/header.twig' %}
 
-<div id="content">{% block content %}{% endblock %}</div>
-{% block script %}
-    <!-- Bootstrap core JS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Core theme JS-->
-    <script src="../js/scripts.js"></script>
-{% endblock %}
-</body>
-</html>
+		{% if notification is not empty %}
+			{% if notification.warning is not empty %}
+				<div class="alert alert-warning">
+					{{notification.warning}}
+				</div>
+			{% endif %}
+			{% if notification.success is not empty %}
+				<div class="alert alert-success">
+					{{notification.success}}
+				</div>
+			{% endif %}
+		{% endif %}
+		<div id="content"> {% block content %}{% endblock %}
+			</div>
+			{% block script %}
+				<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+				<script src="../js/scripts.js"></script>
+			{% endblock %}
+		</body>
+	</html>
