--- a/templates/include/header.twig
+++ b/templates/include/header.twig
@@ -1,37 +1,43 @@
 <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
-    <div class="container px-4 px-lg-5">
-        <a class="navbar-brand" href="index.html">Start Bootstrap</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
-                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            Menu
-            <i class="fas fa-bars"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ms-auto py-4 py-lg-0">
-                <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/">Home</a></li>
-                <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/?p=inscription">Inscription</a>
-                    {% if not user_connecte %}
-                <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/?p=connexion">Connexion</a>
-                    {% else %}
-                    {% if user.isadmin %}
-                <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/?p=ajoutPost">Ajouter un Post</a>
-                    {% endif %}
-                <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/?deconnexion">Déconnexion</a>
-                    {% endif %}
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
-<header class="masthead" style="background-image: url('../assets/img/home-bg.jpg')">
-    <div class="container position-relative px-4 px-lg-5">
-        <div class="row gx-4 gx-lg-5 justify-content-center">
-            <div class="col-md-10 col-lg-8 col-xl-7">
-                <div class="site-heading">
-                    <h1>Blogs d'Alex</h1>
-                    <span class="subheading">Actualité scientifique, informatique et jeux vidéo</span>
-                </div>
-            </div>
-        </div>
-    </div>
-</header>
+	<div class="container px-4 px-lg-5">
+		<a class="navbar-brand" href="index.html">Start Bootstrap</a>
+		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+			Menu
+			<i class="fas fa-bars"></i>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarResponsive">
+			<ul class="navbar-nav ms-auto py-4 py-lg-0">
+				<li class="nav-item">
+					<a class="nav-link px-lg-3 py-3 py-lg-4" href="/">Home</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link px-lg-3 py-3 py-lg-4" href="/register.php">Inscription</a>
+				</li>
+				{% if not user_connecte %}
+					<li class="nav-item">
+						<a class="nav-link px-lg-3 py-3 py-lg-4" href="/connexion.php">Connexion</a>
+					</li>
+				{% else %}
+					{% if user.isadmin %}
+						<li class="nav-item">
+							<a class="nav-link px-lg-3 py-3 py-lg-4" href="/addPost.php">Ajouter un Post</a>
+						</li>
+					{% endif %}
+					<li class="nav-item">
+						<a class="nav-link px-lg-3 py-3 py-lg-4" href="/deconnexion.php">Déconnexion</a>
+					</li>
+				{% endif %}
+			</ul>
+		</div>
+	</li>
+</div></nav><header class="masthead" style="background-image: url('../assets/img/home-bg.jpg')">
+<div class="container position-relative px-4 px-lg-5">
+	<div class="row gx-4 gx-lg-5 justify-content-center">
+		<div class="col-md-10 col-lg-8 col-xl-7">
+			<div class="site-heading">
+				<h1>Blogs d'Alex</h1>
+				<span class="subheading">Actualité scientifique, informatique et jeux vidéo</span>
+			</div>
+		</div>
+	</div>
+</div></header>
