--- a/templates/base.twig
+++ b/templates/base.twig
@@ -27,21 +27,25 @@
 	{% endblock %}
 	<body>
 		{% include 'include/header.twig' %}
-
-		{% if notification is not empty %}
-			{% if notification.warning is not empty %}
-				<div class="alert alert-warning">
-					{{notification.warning}}
-				</div>
-			{% endif %}
-			{% if notification.success is not empty %}
-				<div class="alert alert-success">
-					{{notification.success}}
-				</div>
-			{% endif %}
-		{% endif %}
-		<div id="content"> {% block content %}{% endblock %}
+		<div class="container mb-3">
+			<div class="row">
+				{% if notification is not empty %}
+					{% if notification.warning is not empty %}
+						<div class="alert alert-warning">
+							{{notification.warning}}
+						</div>
+					{% endif %}
+					{% if notification.success is not empty %}
+						<div class="alert alert-success">
+							{{notification.success}}
+						</div>
+					{% endif %}
+				{% endif %}
+				<div id="content"> {% block content %}{% endblock %}</div>
 			</div>
+		</div>
+		{% include 'include/footer.twig' %}
+
 			{% block script %}
 				<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 				<script src="../js/scripts.js"></script>
