--- a/templates/showPost.twig
+++ b/templates/showPost.twig
@@ -2,3 +2,28 @@
 
 {% block title %}{% endblock %}
 
+
+{% block content %}
+<div class="container">
+    <h1>{{ post.titre }}</h1>
+    <h2>{{ post.chapo }}</h2>
+    <div class="d-flex justify-content-between">
+        <p>Posté par
+            {{ author.pseudo }}
+            le
+            {{ post.dateCreation |date('d-m-Y') }}</p>
+        {% if categories %}
+        <p>{% for categorie in categories %} {{ categorie.libelle }} {% endfor %} </p>
+        {% endif %}
+    </div>
+    <div class="mb-4">
+        {{post.content}}
+    </div>
+    {% if image %}
+        {{image.path}}
+            {% if image | length == 1 %}
+                <img src="{{image[0].path}}" alt="">
+            {% endif %}
+    {% endif %}
+</div>
+{% endblock %}
