--- a/templates/base.twig
+++ b/templates/base.twig
@@ -35,33 +35,37 @@
 		{% include 'include/header.twig' %}
 		<div class="container mb-3">
 			<div class="row">
-				{% if notification is not empty %}
-					{% if notification.warning is not empty %}
-						<div class="alert alert-warning">
-							{{notification.warning}}
-						</div>
+				<div class="col-sm-9">
+					{% if notification is not empty %}
+						{% if notification.warning is not empty %}
+							<div class="alert alert-warning">
+								{{notification.warning}}
+							</div>
+						{% endif %}
+						{% if notification.success is not empty %}
+							<div class="alert alert-success">
+								{{notification.success}}
+							</div>
+						{% endif %}
+						{% if notification.notice is not empty %}
+							<div class="alert alert-success">
+								{{notification.notice}}
+							</div>
+						{% endif %}
 					{% endif %}
-					{% if notification.success is not empty %}
-						<div class="alert alert-success">
-							{{notification.success}}
+					<div id="content"> {% block content %}{% endblock %}
 						</div>
-					{% endif %}
-					{% if notification.notice is not empty %}
-						<div class="alert alert-success">
-							{{notification.notice}}
-						</div>
-					{% endif %}
-				{% endif %}
-				<div id="content"> {% block content %}{% endblock %}
+					</div>
+					<div class="col-sm-3">
+						{% include 'include/aside.twig' %}
 					</div>
 				</div>
-			</div>
-			{% include 'include/footer.twig' %}
+				{% include 'include/footer.twig' %}
 
-			{% block script %}
-				<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-				<script src="../js/scripts.js"></script>
-			{% endblock %}
-		</body>
-
-	</html>
+				{% block script %}
+					<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+					<script src="../js/scripts.js"></script>
+				{% endblock %}
+		</div>
+	</body>
+</html>
