--- a/templates/postByCategorie.twig
+++ b/templates/postByCategorie.twig
@@ -2,7 +2,10 @@
 {% block content %}
 	<!-- Main Content-->
 	<div class="container px-4 px-lg-5">
-		<h2>Bonjour{{ user.getpseudo }} post de la categorie : {{ categorie.getlibelle }}</h2>
+		<h2>Bonjour
+			{{ user.getpseudo }}
+			post de la categorie :
+			{{ categorie.getlibelle }}</h2>
 		<div class="row gx-4 gx-lg-5 justify-content-center">
 			<div class="col-md-10 col-lg-8 col-xl-7">
 				{% for post in postTrie %}
@@ -25,7 +28,24 @@
 
 				<!-- Pager-->
 				<div class="d-flex justify-content-end mb-4">
-					<a class="btn btn-primary text-uppercase" href="#!">Older Posts →</a>
+					<nav aria-label="Page navigation example">
+						<ul class="pagination">
+							{% if currentPage > 1 %}
+								<li class="page-item">
+									<a class="page-link" href="affichebyCategory.php?categorie={{categorie.id}}&page={{currentPage - 1}}" aria-label="Previous">
+										<span aria-hidden="true">&laquo;</span>
+									</a>
+								</li>
+							{% endif %}
+							{% if currentPage < nbpages %}
+								<li class="page-item">
+									<a class="page-link" href="affichebyCategory.php?categorie={{categorie.id}}&page={{currentPage + 1}}" aria-label="Next">
+										<span aria-hidden="true">&raquo;</span>
+									</a>
+								</li>
+							{% endif %}
+						</ul>
+					</nav>
 				</div>
 			</div>
 		</div>
