--- a/templates/administration/administration.twig
+++ b/templates/administration/administration.twig
@@ -1,26 +1,34 @@
 {% extends "base.twig" %}
+
+{% block title %}Administration
+{% endblock %}
 {% block content %}
 	<!-- Main Content-->
 	<div class="container px-4 px-lg-5">
-		<h2>Bonjour
-			{{ user.getpseudo }}
-			post de la categorie :
-			{{ categorie.getlibelle }}</h2>
-		<div class="row gx-4 gx-lg-5 justify-content-center">
-			<div class="col-md-10 col-lg-8 col-xl-7">
-				{% for post in postTrie %}
+		<nav class="navbar navbar-expand-lg bg-light">
+			<h2>Bonjour
+				{{ user.getpseudo }}</h2>
+		</nav>
+
+		<div class="row gx-4 gx-lg-6 justify-content-center">
+			<div class="col-md-10 col-lg-8 col-xl-8">
+				{% for post in posts %}
 					<!-- Post preview-->
 					<div class="post-preview">
-						<a href="showPost.php?idPost={{ post.idPost }}">
-							<h2 class="post-title">{{ post.titre }}</h2>
-							<h3 class="post-subtitle">{{ post.chapo }}</h3>
+						<a href="showPost.php?idPost={{post.idPost}}">
+							<h2 class="post-title">{{post.titre}}</h2>
+							<h3 class="post-subtitle">{{post.chapo}}</h3>
 						</a>
 						<p class="post-meta">
 							Posted by
 							<a href="#">{{ user.getpseudo(post.idAuthor) }}</a>
 							on
-							{{ post.dateCreation }}
+							{{post.dateCreation}}
 						</p>
+					</div>
+					<div>
+						<a class="btn btn-danger" href="administration.php?delete=true&idPost={{ post.idPost }}">Supprimer</a>
+						<a class="btn btn-primary" href="updatePost.php?idPost= {{ post.idPost }}">Modifier</a>
 					</div>
 					<hr class="my-4"/>
 				{% endfor %}
@@ -32,14 +40,14 @@
 						<ul class="pagination">
 							{% if currentPage > 1 %}
 								<li class="page-item">
-									<a class="page-link" href="affichebyCategory.php?categorie={{categorie.id}}&page={{currentPage - 1}}" aria-label="Previous">
+									<a class="page-link" href="administration.php?page={{currentPage - 1}}" aria-label="Previous">
 										<span aria-hidden="true">&laquo Précédent</span>
 									</a>
 								</li>
 							{% endif %}
 							{% if currentPage < nbpages %}
 								<li class="page-item">
-									<a class="page-link" href="affichebyCategory.php?categorie={{categorie.id}}&page={{currentPage + 1}}" aria-label="Next">
+									<a class="page-link" href="administration.php?page={{currentPage + 1}}" aria-label="Next">
 										<span aria-hidden="true">Suivant &raquo;</span>
 									</a>
 								</li>
