--- a/templates/updatePost.twig
+++ b/templates/updatePost.twig
@@ -1,29 +1,21 @@
 {% extends "base.twig" %}
 
-{% block title %}Ajouter un Post
+{% block title %}Modifier un Post
 {% endblock %}
 {% block content %}
 	<div class="col-6">
-		<form action="../addPost.php" method="post" enctype="multipart/form-data">
+		<form method="post" enctype="multipart/form-data">
 			<div class="mb-3">
 				<label for="" class="form-label">Titre du post</label>
 				<input type="text" class="form-control" id="" {% if postUpdate %} value="{{ postUpdate.titre }}" {% endif %} name="titre" placeholder="titre du post">
 			</div>
 			<div class="mb-3">
 				<label for="exampleInput" class="form-label">Châpo</label>
-				<textarea name="chapo" id="" cols="30" rows="10" class="form-control" placeholder="Extrait de l'article">
-					{% if postUpdate %}
-						{{ postUpdate.chapo | trim }}
-					{% endif %}
-				</textarea>
+				<textarea name="chapo" id="" cols="30" rows="10" class="form-control" placeholder="Extrait de l'article">{% if postUpdate %}{{ postUpdate.chapo | trim }}{% endif %}</textarea>
 			</div>
 			<div class="mb-3">
 				<label for="exampleInput" class="form-label">Texte de l'Article</label>
-				<textarea name="content" id="" cols="30" rows="10" class="form-control" placeholder="Contenue principale de l'article">
-					{% if postUpdate %}
-						{{ postUpdate.content | trim }}
-					{% endif %}
-				</textarea>
+				<textarea name="content" id="" cols="30" rows="10" class="form-control" placeholder="Contenue principale de l'article">{% if postUpdate %}{{ postUpdate.content | trim }}{% endif %}</textarea>
 			</div>
 			<div class="mb-3">
 				<fieldset>
@@ -41,10 +33,8 @@
 				<input type="file" name="image_principale" class="form-control" accept=".jpg,.png,.gif,.webp" value="">
 			</div>
 			{% if postUpdate %}
-				<input type="hidden" name="postUpdate">
+				<input type="hidden" name="postUpdateId" value= {{ postUpdate.id }}>
 				<button type="submit" class="btn btn-primary">Modifier</button>
-			{% else %}
-				<button type="submit" class="btn btn-primary">Envoyer</button>
 			{% endif %}
 		</form>
 	</div>
