--- a/templates/connexion.twig
+++ b/templates/connexion.twig
@@ -17,5 +17,5 @@
                     <button type="submit" class="btn btn-primary">Envoyer</button>
                 </form>
             </div>
-            <p>Pas encore de compte ? <a href="/?p=inscription">inscrivez-vous ici</a></p>
+            <p>Pas encore de compte ? <a href="/register.php">inscrivez-vous ici</a></p>
 {% endblock %}
