--- a/templates/include/aside.twig
+++ b/templates/include/aside.twig
@@ -1,4 +1,5 @@
 
+<h5>Filrer par categorie</h5>
 <div class="" id="navbarSupportedContent">
 	<ul class="nav flex-column">
 		{% for categorie in categories %}
