--- a/templates/inscription.twig
+++ b/templates/inscription.twig
@@ -8,27 +8,27 @@
 			<div class="col-6">
 				<form action="../register.php" method="post">
 					<div class="mb-3">
-						<label for="exampleInputEmail1" class="form-label">Adresse email</label>
-						<input type="email" class="form-control" id="exampleInputEmail1" name="email" aria-describedby="emailHelp">
+						<label for="exampleInputEmail1" class="form-label">Adresse email <span class="text-danger">*</span></label>
+						<input type="email" class="form-control" id="exampleInputEmail1" name="email" aria-describedby="emailHelp" required="true">
 						<div id="emailHelp" class="form-text">Nous ne divulgerons jamais votre adresse mail</div>
 					</div>
 					<div class="mb-3">
-						<label for="exampleInput" class="form-label">Nom</label>
-						<input type="text" class="form-control" id="exampleInput" name="name" aria-describedby="pseudoHelp">
+						<label for="exampleInput" class="form-label" >Nom <span class="text-danger">*</span></label>
+						<input type="text" class="form-control" id="exampleInput" name="name" aria-describedby="pseudoHelp" required="true">
 					</div>
 					<div class="mb-3">
-						<label for="exampleInput" class="form-label">Pseudo</label>
-						<input type="text" class="form-control" id="exampleInput" name="pseudo" aria-describedby="pseudoHelp">
+						<label for="exampleInput" class="form-label">Pseudo <span class="text-danger">*</span></label>
+						<input type="text" class="form-control" id="exampleInput" name="pseudo" aria-describedby="pseudoHelp" required="true">
 					</div>
 					<div class="mb-3">
-						<label for="exampleInputPassword1" class="form-label">Mots de passe</label>
-						<input type="password" class="form-control" name="password" id="exampleInputPassword1">
+						<label for="exampleInputPassword1" class="form-label">Mots de passe <span class="text-danger">*</span></label>
+						<input type="password" class="form-control" name="password" id="exampleInputPassword1" required="true">
 					</div>
 					<button type="submit" class="btn btn-primary">Envoyer</button>
 				</form>
 			</div>
-			<p>Déja inscrit ?
-				<a href="/?p=connexion">Connectez-vous ici</a>
+			<p class="mt-3">Déja inscrit ?
+				<a href="/connexion.php">Connectez-vous ici</a>
 			</p>
 		</div>
 	</div>
