--- a/templates/showPost.twig
+++ b/templates/showPost.twig
@@ -33,14 +33,16 @@
 			</div>
 		{% endif %}
 
-		<div class="row mb-3">
-			<div class="col-12">
-				<form action="">
-					<input type="hidden" value="{{post.id}}">
-					<textarea class="form-control" name="commentaire" id="" cols="30" rows="3"></textarea>
-					<button class="btn btn-primary" type="submit">Ajouter un commentaire</button>
-				</form>
+		{% if user %}
+			<div class="row mb-3">
+				<div class="col-12">
+					<form action="" method="post">
+						<input type="hidden" name="postId" value="{{post.id}}">
+						<textarea class="form-control" name="content" id="" cols="30" rows="3"></textarea>
+						<button class="btn btn-primary" type="submit">Ajouter un commentaire</button>
+					</form>
+				</div>
 			</div>
-		</div>
+		{% endif %}
 	</div>
 {% endblock %}
