--- a/templates/administration/administrationSignin.twig
+++ b/templates/administration/administrationSignin.twig
@@ -1,35 +1,63 @@
-{% extends "administration/baseAdministration.twig" %}
+<!DOCTYPE html>
+<html lang="en">
 
-{% block content %}
-	<div class="container my-auto">
-		<div class="row mt-5">
-			<div class="col-lg-4 col-md-8 col-12 mx-auto">
-				<div class="card z-index-0 fadeIn3 fadeInBottom">
-					<div class="card-body">
-						<form role="form" action="../../connexion.php" method="post" class="text-start">
-							<div class="input-group input-group-outline my-3">
-								<label class="form-label">Adresse email</label>
-								<input type="email" name="email" class="form-control">
+	<head>
+		<meta charset="utf-8"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<link rel="apple-touch-icon" sizes="76x76" href="../assets/img/apple-icon.png">
+		<link rel="icon" type="image/png" href="../assets/img/favicon.png">
+		<title>
+			Material Dashboard 2 by Creative Tim
+		</title>
+		<!--     Fonts and icons     -->
+		<link
+		rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700"/>
+		<!-- Nucleo Icons -->
+		<link href="../assets/css/nucleo-icons.css" rel="stylesheet"/>
+		<link
+		href="../assets/css/nucleo-svg.css" rel="stylesheet"/>
+		<!-- Font Awesome Icons -->
+		<script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
+		<!-- Material Icons -->
+		<link
+		href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
+		<!-- CSS Files -->
+		<link id="pagestyle" href="../assets/css/material-dashboard.css?v=3.0.4" rel="stylesheet"/>
+	</head>
+
+	<body class="g-sidenav-show  bg-gray-200">
+		{% block content %}
+			<div class="container my-auto">
+				<div class="row mt-5">
+					<div class="col-lg-4 col-md-8 col-12 mx-auto">
+						<div class="card z-index-0 fadeIn3 fadeInBottom">
+							<div class="card-body">
+								<form role="form" action="../../connexion.php" method="post" class="text-start">
+									<div class="input-group input-group-outline my-3">
+										<label class="form-label">Adresse email</label>
+										<input type="email" name="email" class="form-control">
+									</div>
+									<div class="input-group input-group-outline mb-3">
+										<label class="form-label">Mots de passe</label>
+										<input type="password" name="password" class="form-control">
+									</div>
+									<div class="form-check form-switch d-flex align-items-center mb-3">
+										<input class="form-check-input" type="checkbox" id="rememberMe" checked>
+										<label class="form-check-label mb-0 ms-3" for="rememberMe">Remember me</label>
+									</div>
+									<div class="text-center">
+										<button type="submit" class="btn bg-gradient-primary w-100 my-4 mb-2">Sign in</button>
+									</div>
+									<p class="mt-4 text-sm text-center">
+										Don't have an account?
+										<a href="../../register.php" class="text-primary text-gradient font-weight-bold">Sign up</a>
+									</p>
+								</form>
 							</div>
-							<div class="input-group input-group-outline mb-3">
-								<label class="form-label">Mots de passe</label>
-								<input type="password" name="password" class="form-control">
-							</div>
-							<div class="form-check form-switch d-flex align-items-center mb-3">
-								<input class="form-check-input" type="checkbox" id="rememberMe" checked>
-								<label class="form-check-label mb-0 ms-3" for="rememberMe">Remember me</label>
-							</div>
-							<div class="text-center">
-								<button type="submit" class="btn bg-gradient-primary w-100 my-4 mb-2">Sign in</button>
-							</div>
-							<p class="mt-4 text-sm text-center">
-								Don't have an account?
-								<a href="../../register.php" class="text-primary text-gradient font-weight-bold">Sign up</a>
-							</p>
-						</form>
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-	</div>
-{% endblock %}
+		{% endblock %}
+	</body>
+</html>
