--- a/templates/base.twig
+++ b/templates/base.twig
@@ -26,6 +26,7 @@
 			href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css"/>
 			<!-- Core theme CSS (includes Bootstrap)-->
 			{% block css %}
+				<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 				<link href="../assets/css/styles.css" rel="stylesheet"/>
 			{% endblock %}
 		</head>
