--- a/templates/home.twig
+++ b/templates/home.twig
@@ -8,7 +8,7 @@
 		</nav>
 
 		<div class="row gx-4 gx-lg-5 justify-content-center">
-			<div class="col-md-10 col-lg-8 col-xl-7">
+			<div class="col-12">
 				{% for post in lastPost %}
 					<!-- Post preview-->
 					<div class="post-preview">
