--- a/templates/postByCategorie.twig
+++ b/templates/postByCategorie.twig
@@ -7,7 +7,7 @@
 			post de la categorie :
 			{{ categorie.getlibelle }}</h2>
 		<div class="row gx-4 gx-lg-5 justify-content-center">
-			<div class="col-md-10 col-lg-8 col-xl-7">
+			<div class="col-12">
 				{% for post in postTrie %}
 					<!-- Post preview-->
 					<div class="post-preview">
