--- a/templates/home.twig
+++ b/templates/home.twig
@@ -9,7 +9,7 @@
 
 		<div class="row gx-4 gx-lg-5 justify-content-center">
 			<div class="col-12">
-				{% for post in lastPost %}
+				{% for post in posts %}
 					<!-- Post preview-->
 					<div class="post-preview">
 						<a href="showPost.php?idPost={{post.idPost}}">
@@ -23,13 +23,36 @@
 							{{post.dateCreation}}
 						</p>
 					</div>
-					<hr class="my-4"/>
+					{% if user.isadmin %}
+						<div>
+							<a class="btn btn-danger" href="/?delete=true&idPost={{ post.idPost }}">Supprimer</a>
+							<a class="btn btn-primary" href="updatePost.php?idPost= {{ post.idPost }}">Modifier</a>
+						</div>
+						<hr class="my-4"/>
+					{% endif %}
 				{% endfor %}
 				<!-- Divider-->
 
 				<!-- Pager-->
 				<div class="d-flex justify-content-end mb-4">
-					<a class="btn btn-primary text-uppercase" href="#!">Older Posts →</a>
+					<nav aria-label="Page navigation example">
+						<ul class="pagination">
+							{% if currentPage > 1 %}
+								<li class="page-item">
+									<a class="page-link" href="/?page={{currentPage - 1}}" aria-label="Previous">
+										<span aria-hidden="true">&laquo Précédent</span>
+									</a>
+								</li>
+							{% endif %}
+							{% if currentPage < nbpages %}
+								<li class="page-item">
+									<a class="page-link" href="/?page={{currentPage + 1}}" aria-label="Next">
+										<span aria-hidden="true">Suivant &raquo;</span>
+									</a>
+								</li>
+							{% endif %}
+						</ul>
+					</nav>
 				</div>
 			</div>
 		</div>
