--- a/templates/base.twig
+++ b/templates/base.twig
@@ -1,74 +1,66 @@
 <!DOCTYPE html>
 <html>
-	{% block head %}
+  {% block head %}
+    <head>
+      <meta charset="utf-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+      <meta name="description" content="" />
+      <meta name="author" content="" />
+      <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+      <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+      <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+      <link rel="manifest" href="/site.webmanifest" />
+      <title>
+        {% block title %}
+          My Blog
+        {% endblock %}
+      </title>
+      <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+      <!-- Font Awesome icons (free version) -->
+      <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
+      <!-- Google fonts -->
+      <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
+      <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css" />
+      <!-- Core theme CSS (includes Bootstrap) -->
+      {% block css %}
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link href="../assets/css/styles.css" rel="stylesheet" />
+      {% endblock %}
+    </head>
+  {% endblock %}
 
-		<head>
-			<meta charset="utf-8"/>
-			<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-			<meta name="description" content=""/>
-			<meta name="author" content=""/>
-			<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-			<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-			<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-			<link rel="manifest" href="/site.webmanifest">
-			<title>
-				{% block title %}
-					My Blog
-				{% endblock %}
-			</title>
-			<link
-			rel="icon" type="image/x-icon" href="assets/favicon.ico"/>
-			<!-- Font Awesome icons (free version)-->
-			<script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
-			<!-- Google fonts-->
-			<link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css"/>
-			<link
-			href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css"/>
-			<!-- Core theme CSS (includes Bootstrap)-->
-			{% block css %}
-				<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
-				<link href="../assets/css/styles.css" rel="stylesheet"/>
-			{% endblock %}
-		</head>
-	{% endblock %}
-
-	<body>
-		{% include 'include/header.twig' %}
-		<div class="container mb-3">
-			<div class="row">
-				<div class="col-sm-9">
-					{% if notification is not empty %}
-						{% if notification.warning is not empty %}
-							<div class="alert alert-warning">
-								{{notification.warning}}
-							</div>
-						{% endif %}
-						{% if notification.success is not empty %}
-							<div class="alert alert-success">
-								{{notification.success}}
-							</div>
-						{% endif %}
-						{% if notification.notice is not empty %}
-							<div class="alert alert-success">
-								{{notification.notice}}
-							</div>
-						{% endif %}
-					{% endif %}
-					<div id="content"> {% block content %}{% endblock %}
-						</div>
-					</div>
-					{% if categories is defined and categories is not empty %}
-						<div class="col-sm-3">
-							{% include 'include/aside.twig' %}
-						</div>
-					{% endif %}
-				</div>
-				{% include 'include/footer.twig' %}
-
-				{% block script %}
-					<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-					<script src="../js/scripts.js"></script>
-				{% endblock %}
-			</div>
-		</body>
-	</html>
+  <body>
+    {% include 'include/header.twig' %}
+    <div class="container mb-3">
+      <div class="row">
+        <div class="col-sm-9">
+          {% if notification is not empty %}
+            {% if notification.warning is not empty %}
+              <div class="alert alert-warning">{{ notification.warning }}</div>
+            {% endif %}
+            {% if notification.success is not empty %}
+              <div class="alert alert-success">{{ notification.success }}</div>
+            {% endif %}
+            {% if notification.notice is not empty %}
+              <div class="alert alert-success">{{ notification.notice }}</div>
+            {% endif %}
+          {% endif %}
+          <div id="content">
+            {% block content %}
+            {% endblock %}
+          </div>
+        </div>
+        {% if categories is defined and categories is not empty %}
+          <div class="col-sm-3">
+            {% include 'include/aside.twig' %}
+          </div>
+        {% endif %}
+      </div>
+    </div>
+    {% include 'include/footer.twig' %}
+    {% block script %}
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+      <script src="../js/scripts.js"></script>
+    {% endblock %}
+  </body>
+</html>
