--- a/templates/inscription.twig
+++ b/templates/inscription.twig
@@ -22,7 +22,7 @@
 					</div>
 					<div class="mb-3">
 						<label for="exampleInputPassword1" class="form-label">Mots de passe <span class="text-danger">*</span></label>
-						<input type="password" class="form-control" name="password" id="exampleInputPassword1" required="true">
+						<input type="password" class="form-control" name="password" id="verifPassword" required="true">
 					</div>
 					<button type="submit" class="btn btn-primary">Envoyer</button>
 				</form>
