--- a/templates/postByCategorie.twig
+++ b/templates/postByCategorie.twig
@@ -10,7 +10,7 @@
 			<div class="col-12">
 				{% for post in postTrie %}
 					<!-- Post preview-->
-					<div class="post-preview">
+					<div class="post-preview" style="background-color: aliceblue">
 						<a href="showPost.php?idPost={{ post.idPost }}">
 							<h2 class="post-title">{{ post.titre }}</h2>
 							<h3 class="post-subtitle">{{ post.chapo }}</h3>
