show date modification + fix bad practice

--- a/templates/home.twig
+++ b/templates/home.twig
@@ -4,8 +4,7 @@
   <div class="container px-4 px-lg-5">
     <nav class="navbar navbar-expand-lg bg-light">
       <h2>
-        Bonjour
-        {{ user.getpseudo }}
+        Accueil
       </h2>
     </nav>
 
