--- a/templates/include/footer.twig
+++ b/templates/include/footer.twig
@@ -1,23 +1,29 @@
 <!-- Footer -->
 <footer class="border-top" style="background-color: #061F28">
-  <div class="container px-4 px-lg-5">
-    <div class="row gx-4 gx-lg-5 justify-content-center">
-      <div class="col-md-6 col-lg-6 col-xl-6">
-        <div class="d-flex flex-column">
-          <p class="mt-0 mb-3 text-white">
-            <span class="fw-bold">Adresse mail : </span><a class="text-white" href="mailto:alexis.mathiot@gmail.com">alexis.mathiot@gmail.com</a>
-          </p>
-          <p class="mt-0 mb-3 text-white">
-            <span class="fw-bold">CV : </span><a class="text-white" href="/assets/">Télécharger mon cv</a>
-          </p>
-          <p class="mt-0 mb-3 text-white">
-            <span class="fw-bold">Github : </span><a class="text-white" href="https://github.com/Alexis3386">Alexis3386</a>
-          </p>
-        </div>
-      </div>
-      <div class="col-md-6 col-lg-6 col-xl-6">
-        <div class="small text-center text-muted fst-italic">Copyright &copy; Mon Blogs 2022</div>
-      </div>
-    </div>
-  </div>
+	<div class="container px-4 px-lg-5">
+		<div class="row gx-4 gx-lg-5 justify-content-center">
+			<div class="col-md-6 col-lg-6 col-xl-6">
+				<div class="d-flex flex-column">
+					<p class="mt-0 mb-3 text-white">
+						<span class="fw-bold">Adresse mail :
+						</span>
+						<a class="text-white" href="mailto:alexis.mathiot@gmail.com">alexis.mathiot@gmail.com</a>
+					</p>
+					<p class="mt-0 mb-3 text-white">
+						<span class="fw-bold">CV :
+						</span>
+						<a target="_blank" class="text-white" href="/assets/CV_Alexis_Mathiot.pdf">Télécharger mon cv</a>
+					</p>
+					<p class="mt-0 mb-3 text-white">
+						<span class="fw-bold">Github :
+						</span>
+						<a class="text-white" href="https://github.com/Alexis3386">Alexis3386</a>
+					</p>
+				</div>
+			</div>
+			<div class="col-md-6 col-lg-6 col-xl-6">
+				<div class="small text-center text-muted fst-italic">Copyright &copy; Mon Blogs 2022</div>
+			</div>
+		</div>
+	</div>
 </footer>
