--- a/templates/inscription.twig
+++ b/templates/inscription.twig
@@ -5,28 +5,72 @@
 {% block content %}
 	<div class="container">
 		<div class="row">
-			<div class="col-7">
+			<div class="col-8">
 				<form action="../register.php" method="post">
 					<div class="mb-3">
-						<label for="exampleInputEmail1" class="form-label">Adresse email <span class="text-danger">*</span></label>
+						<label for="exampleInputEmail1" class="form-label">Adresse email
+							<span class="text-danger">*</span>
+						</label>
 						<input type="email" class="form-control" id="exampleInputEmail1" name="email" aria-describedby="emailHelp" required="true">
 						<div id="emailHelp" class="form-text">Nous ne divulgerons jamais votre adresse mail</div>
 					</div>
 					<div class="mb-3">
-						<label for="exampleInput" class="form-label" >Nom <span class="text-danger">*</span></label>
+						<label for="exampleInput" class="form-label">Nom
+							<span class="text-danger">*</span>
+						</label>
 						<input type="text" class="form-control" id="exampleInput" name="name" aria-describedby="pseudoHelp" required="true">
 					</div>
 					<div class="mb-3">
-						<label for="exampleInput" class="form-label">Pseudo <span class="text-danger">*</span></label>
+						<label for="exampleInput" class="form-label">Pseudo
+							<span class="text-danger">*</span>
+						</label>
 						<input type="text" class="form-control" id="exampleInput" name="pseudo" aria-describedby="pseudoHelp" required="true">
 					</div>
 					<div class="mb-3">
-						<label for="exampleInputPassword1" class="form-label">Mots de passe <span class="text-danger">*</span></label>
+						<label for="exampleInputPassword1" class="form-label">Mots de passe
+							<span class="text-danger">*</span>
+						</label>
 						<input type="password" class="form-control" name="password" id="verifPassword" required="true">
 					</div>
 					<button type="submit" class="btn btn-primary">Envoyer</button>
 				</form>
-				<div id="errorpassword" class="mt-3"></div>
+				<div id="errorpassword" class="mt-3">
+					<div id="maj" class="d-flex">
+						<span class="fault">
+							<i class="fa-solid fa-circle-exclamation"></i>
+						</span>
+						<span class="check d-none">
+							<i class="fa-solid fa-check"></i>
+						</span>
+						Le mot de passe doit comporter au moins une majuscule</div>
+					<div id="min" class="d-flex">
+						<span class="fault">
+							<i class="fa-solid fa-circle-exclamation"></i>
+						</span>
+						<span class="check d-none">
+							<i class="fa-solid fa-check"></i>
+						</span>
+						Le mot de passe doit comporter au moins une minuscule
+					</div>
+					<div id="digit" class="d-flex">
+						<span class="fault">
+							<i class="fa-solid fa-circle-exclamation"></i>
+						</span>
+						<span class="check d-none">
+							<i class="fa-solid fa-check"></i>
+						</span>
+						Le mot de passe doit comporter au moins un chiffre
+					</div>
+					<div id="length" class="d-flex">
+						<span class="fault">
+							<i class="fa-solid fa-circle-exclamation"></i>
+						</span>
+						<span class="check d-none">
+							<i class="fa-solid fa-check"></i>
+						</span>
+						Le mot de passe doit comporter au moins 8 characters
+					</div>
+				</div>
 			</div>
 			<p class="mt-3">Déja inscrit ?
 				<a href="/connexion.php">Connectez-vous ici</a>
