--- a/templates/postByCategorie.twig
+++ b/templates/postByCategorie.twig
@@ -2,10 +2,7 @@
 {% block content %}
 	<!-- Main Content-->
 	<div class="container px-4 px-lg-5">
-		<h2>Bonjour
-			{{ user.getpseudo }}
-			post de la categorie :
-			{{ categorie.getlibelle }}</h2>
+		<h2>{{ categorie.getlibelle }}</h2>
 		<div class="row gx-4 gx-lg-5 justify-content-center">
 			<div class="col-12">
 				{% for post in postTrie %}
@@ -25,7 +22,6 @@
 					<hr class="my-4"/>
 				{% endfor %}
 				<!-- Divider-->
-
 				<!-- Pager-->
 				<div class="d-flex justify-content-end mb-4">
 					<nav aria-label="Page navigation example">
