add HomeController + lot off change

--- a/templates/inscription.twig
+++ b/templates/inscription.twig
@@ -6,7 +6,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-8">
-				<form action="../register.php" method="post">
+				<form action="/register" method="post">
 					<div class="mb-3">
 						<label for="exampleInputEmail1" class="form-label">Adresse email
 							<span class="text-danger">*</span>
