--- a/templates/connexion.twig
+++ b/templates/connexion.twig
@@ -3,7 +3,7 @@
 {% block title %}Connexion{% endblock %}
 {% block content %}
             <div class="col-7">
-                <form action="../connexion.php" method="post">
+                <form action="/connexion" method="POST">
                     <div class="mb-3">
                         <label for="exampleInputEmail1" class="form-label">Adresse email</label>
                         <input type="email" class="form-control" id="exampleInputEmail1" name="email"
@@ -17,5 +17,5 @@
                     <button type="submit" class="btn btn-primary">Envoyer</button>
                 </form>
             </div>
-            <p>Pas encore de compte ? <a href="/register.php">inscrivez-vous ici</a></p>
+            <p>Pas encore de compte ? <a href="/register">inscrivez-vous ici</a></p>
 {% endblock %}
