--- a/templates/include/header.twig
+++ b/templates/include/header.twig
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
 	<div class="container px-4 px-lg-5">
-		<a class="navbar-brand" href="index.html">Blogs d'Alex</a>
+		<a class="navbar-brand" href="\">Blogs d'Alex</a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 			Menu
 			<i class="fas fa-bars"></i>
@@ -12,10 +12,10 @@
 				</li>
 				{% if not user_connecte %}
 					<li class="nav-item">
-						<a class="nav-link px-lg-3 py-3 py-lg-4" href="/register.php">Inscription</a>
+						<a class="nav-link px-lg-3 py-3 py-lg-4" href="/register">Inscription</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link px-lg-3 py-3 py-lg-4" href="/connexion.php">Connexion</a>
+						<a class="nav-link px-lg-3 py-3 py-lg-4" href="/connexion">Connexion</a>
 					</li>
 				{% endif %}
 				<li class="nav-item">
@@ -37,7 +37,7 @@
 								</li>
 							{% endif %}
 							<li>
-								<a class="nav-link px-lg-3 py-3 py-lg-4" href="/deconnexion.php">Déconnexion</a>
+								<a class="nav-link px-lg-3 py-3 py-lg-4" href="/deconnexion">Déconnexion</a>
 							</li>
 						</ul>
 					</div>
