--- a/templates/include/header.twig
+++ b/templates/include/header.twig
@@ -30,10 +30,10 @@
 						<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
 							{% if user.isadmin %}
 								<li>
-									<a class="nav-link px-lg-3 py-3 py-lg-4" href="/addPost.php">Ajouter un Post</a>
+									<a class="nav-link px-lg-3 py-3 py-lg-4" href="/showAddPost">Ajouter un Post</a>
 								</li>
 								<li>
-									<a class="nav-link px-lg-3 py-3 py-lg-4" href="/administration.php">Commentaires en attente</a>
+									<a class="nav-link px-lg-3 py-3 py-lg-4" href="/administration">Commentaires en attente</a>
 								</li>
 							{% endif %}
 							<li>
