--- a/templates/addPost.twig
+++ b/templates/addPost.twig
@@ -5,7 +5,7 @@
 {% block content %}
 	<div class="col-6">
 	<h1>Ajouter un Post</h1>
-		<form action="../addPost.php" method="post" enctype="multipart/form-data">
+		<form action="/addPost" method="post" enctype="multipart/form-data">
 			<div class="mb-3">
 				<label for="" class="form-label">Titre du post</label>
 				<input type="text" class="form-control" id="" {% if postUpdate %} value="{{ postUpdate.titre }}" {% endif %} name="titre" placeholder="titre du post">
