--- a/templates/showPost.twig
+++ b/templates/showPost.twig
@@ -41,9 +41,9 @@
 		{% if user %}
 			<div class="row mb-3">
 				<div class="col-12">
-					<form action="" method="post">
+					<form action="/addComent" method="POST">
 						<input type="hidden" name="postId" value="{{post.id}}">
-						<textarea class="form-control" name="content" id="" cols="30" rows="3"></textarea>
+						<label for=""></label><textarea class="form-control" name="content" id="" cols="30" rows="3"></textarea>
 						<button class="btn btn-primary" type="submit">Ajouter un commentaire</button>
 					</form>
 				</div>
