--- a/templates/include/header.twig
+++ b/templates/include/header.twig
@@ -19,7 +19,7 @@
 					</li>
 				{% endif %}
 				<li class="nav-item">
-					<a class="nav-link px-lg-3 py-3 py-lg-4" href="/contact.php">Me contacter</a>
+					<a class="nav-link px-lg-3 py-3 py-lg-4" href="/contact">Me contacter</a>
 				</li>
 				{% if user %}
 					<div class="dropdown">
