--- a/templates/contact.twig
+++ b/templates/contact.twig
@@ -1,28 +1,31 @@
 {% extends 'base.twig' %}
 {% block content %}
-  <div class="row">
-  <h2>Me contacter</h2>
-    <div class="col-6">
-      <form action="" method="post">
-        <div class="form-group">
-          <label for="" class="form-label">Nom</label>
-          <input class="form-control" type="text" name="name" />
+    <div class="row">
+        <h2>Me contacter</h2>
+        <div class="col-6">
+            <form action="" method="post">
+                <div class="form-group">
+                    <label for="name" class="form-label">Nom</label> <span class="text-danger">*</span>
+                    <input class="form-control" type="text" id="name" name="name" required/>
+                </div>
+                <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label">Email</label> <span class="text-danger">*</span>
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                           name="email" required/>
+                    <div id="emailHelp" class="form-text">Nous ne partagerons jamais votre adersse avec quelqu'un
+                        d'autre
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="form-label" for="subject">Sujet</label> <span class="text-danger">*</span>
+                    <input class="form-control" id="subject" type="text" name="subject" required/>
+                </div>
+                <div class="form-group mb-2">
+                    <label for="exampleFormControlTextarea1">Message</label> <span class="text-danger">*</span>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" name="msg" rows="4" required></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary">Envoyer</button>
+            </form>
         </div>
-        <div class="mb-3">
-          <label for="exampleInputEmail1" class="form-label">Email</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="email" />
-          <div id="emailHelp" class="form-text">Nous ne partagerons jamais votre adersse avec quelqu'un d'autre</div>
-        </div>
-        <div class="form-group">
-          <label class="form-label" for="">Sujet</label>
-          <input class="form-control" type="text" name="sub" />
-        </div>
-        <div class="form-group mb-2">
-          <label for="exampleFormControlTextarea1">Message</label>
-          <textarea class="form-control" id="exampleFormControlTextarea1" name="msg" rows="4"></textarea>
-        </div>
-        <button type="submit" class="btn btn-primary">Envoyer</button>
-      </form>
     </div>
-  </div>
 {% endblock %}
