--- a/templates/postByCategorie.twig
+++ b/templates/postByCategorie.twig
@@ -8,7 +8,7 @@
 				{% for post in postTrie %}
 					<!-- Post preview-->
 					<div class="post-preview" style="background-color: aliceblue">
-						<a href="showPost.php?idPost={{ post.id }}">
+						<a href="showPost?id={{ post.id }}">
 							<h2 class="post-title">{{ post.titre }}</h2>
 							<h3 class="post-subtitle">{{ post.chapo }}</h3>
 						</a>
